fix: center aligned username

--- a/assets/css/user-page.css
+++ b/assets/css/user-page.css
@@ -58,6 +58,7 @@
   opacity: 0.7;
   border-radius: var(--btn-radius);
   width: fit-content;
+  text-align: center;
 }
 
 .collapsible-collapsed {
